--- a/main.css
+++ b/main.css
@@ -1,10 +1,29 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
+
 /* 
     Created on : 23 kwi 2019, 00:34:54
     Author     : Zenon Marek Raubuć
 */
 
+
+#cytat {
+    text-align: justify;
+    width: 75%;
+    margin: 0 auto;
+    margin-top: 5rem;
+    font-family: 'Noto Sans JP', sans-serif;
+    font-size: 35px;
+    line-height: 2;
+    color: brown;
+}
+
+#caption {
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 3rem;
+    font-size: 30px;
+    text-align: center
+}
+
+body {
+    background: url(assets/kaskada.JPG) no-repeat fixed center;
+}
