--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@
     font-family: 'Noto Sans JP', sans-serif;
     font-size: 35px;
     line-height: 2;
-    color: brown;
+    color: darkorange;;
 }
 
 #caption {
